--- a/Contact.html
+++ b/Contact.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>Contact</h1>
-    <p>Phone No.:8917484487</p>
-    <p>ramakrishnasahoo001@gmail.com</p>
-    <p>Address: India,Odisha,Khorda,Satya Nagar,Pin-751007</p>
+    <p>Phone No.:123456789</p>
+    <p>ramakrishnasahoo@gmail.com</p>
+    <p>Address: India,Odisha</p>
   </body>
 </html>
