--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
       <input type="submit">
     </form> -->
     <h1>Contact Us</h1>
-    <form action="mailto:ramakrishnasahoo001@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:ramakrishnasahoo@gmail.com" method="post" enctype="text/plain">
       <label>Name:</label>
       <input type="text" name="Name" value=""><br>
       <label>Email:</label>
