--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
     </thead>
     <tbody>
       <tr>
-        <td>2021</td>
+        <td>2@@@</td>
         <td>CEH</td>
-        <td>Supraja Technology</td>
+        <td>Technology</td>
       </tr>
       <tr>
-        <td>2019</td>
+        <td>2@@@</td>
         <td>BCA</td>
-        <td>Regional College of Management</td>
+        <td>College of Management</td>
       </tr>
       <tr>
-        <td>2017</td>
+        <td>2@@@</td>
         <td>+2</td>
-        <td>NIOS</td>
+        <td>College</td>
       </tr>
       <tr>
         <td>2016</td>
         <td>10th</td>
-        <td>GHVM</td>
+        <td>School</td>
       </tr>
     </tbody>
     </table>
